# synergytray

./: CMakeLists.txt  README
doc/: CMakeLists.txt  index.cache.bz2  index.docbook
icons/: icons.qrc  video-display.svgz
src/: CMakeLists.txt  Messages.sh  config_client.ui  config_server.ui  config_settings.ui  iconloader.cpp  iconloader.h  main.cpp  mainview.cpp  mainview.h  mainview.ui  networkutils.cpp  networkutils.h  processutils.cpp  processutils.h  settings.kcfgc  synergyclient.cpp  synergyclient.h  synergymanager.cpp  synergymanager.h  synergyserver.cpp  synergyserver.h  synergytray.cpp  synergytray.desktop  synergytray.h  synergytray.kcfg  synergytrayui.rc  synergytrayview.cpp  synergytrayview.h
